fix: (searchbar) fixed styling bug with height of search-results on mobile when scroll is active

--- a/components/src/components/header/header.scss
+++ b/components/src/components/header/header.scss
@@ -211,7 +211,7 @@
       &::before {
         content: " ";
         width: 209px;
-        height: 63px;
+        height: 64px;
         background-color: var(--sdds-white);
         position: absolute;
         display: block;
